--- a/index.html
+++ b/index.html
@@ -1,52 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
-</head>
-<style>
-    table {
-        border: 0.5px solid black; 
-        text-align: center;
-        margin: auto;
-        width: 80%;
-    }
-    td {
-        border: 0.5px solid black; 
-    }
-</style>
-<body>
-<table>
-    <tr>
-        <td>
-            <a href="index.html"><button>inicio</button></a>
-            <a href="autobiografia.html"><button>autobiografía</button></a>
-            <a href="ejercicios.html"><button>ejercicios</button></a>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <h2>fotos personales</h2>
-            <table>
-                <tr>
-                    <td><img src="img/ima1.jpeg" width="200" height="200"> </td>
-                    <td><img src="img/ima2.jpeg" width="200" height="200"></td>
-                    <td><img src="img/ima3.jpeg" width="200" height="200"></td>
-                </tr>
-                <tr>
-                    <td><img src="img/ima4.jpeg" width="200" height="200"></td>
-                    <td><img src="img/ima5.jpeg" width="200" height="200"></td>
-                    <td><img src="img/ima6.jpeg" width="200" height="200"></td>
-                </tr>
-                <tr>
-                    <td><img src="img/ima7.jpeg" width="200" height="200"></td>
-                    <td><img src="img/ima8.jpeg" width="200" height="200"></td>
-                    <td><img src="img/ima9.jpeg" width="200" height="200"></td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-</body>
+<html lang="en" class="no-js">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<title>Scattered Polaroids Gallery</title>
+		<link rel="stylesheet" type="text/css" href="css/demo.css"/>
+		<link rel="stylesheet" type="text/css" href="css/component.css"/>
+		<script src="js/modernizr.min.js"></script>
+		
+	</head>
+	<body>
+
+		<section id="photostack-1" class="photostack photostack-start">
+			<div>
+				<figure>
+					<a href="http://goo.gl/Qw3ND4" class="photostack-img"><img src="img/1chaka.jpg" alt="ima1"/></a>
+					<figcaption>
+						<h2 class="photostack-title">graduados</h2>
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="http://goo.gl/fhwlSP" class="photostack-img"><img src="img/2chaka.jpg" alt="img02"/></a>
+					<figcaption>
+						<h2 class="photostack-title">besties</h2>
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="http://goo.gl/Jmvr4u" class="photostack-img"><img src="img/3chaka.jpg" alt="img03" styles="width:240px"/></a>
+					<figcaption>
+						<h2 class="photostack-title">bday 17</h2>
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="http://goo.gl/49lN3k" class="photostack-img"><img src="img/4.jpg" alt="img04"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Disneyland</h2>
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/5.jpg" alt="img05"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Family</h2>
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/6.jpg" alt="img06"/></a>
+					<figcaption>
+						<h2 class="photostack-title">New Port</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/7.jpg" alt="img07"/></a>
+					<figcaption>
+						<h2 class="photostack-title">bad b</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/8.jpg" alt="img08"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Viaje escolar</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/9.jpg" alt="img09"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Beach</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/10.jpg" alt="img10"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Sol</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/11.jpg" alt="img11"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Solo yo</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/12.jpg" alt="img12"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Food</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/13.jpg" alt="img13"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Santa Monica,CA</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/14.jpg" alt="img14"/></a>
+					<figcaption>
+						<h2 class="photostack-title">L,A</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/15.jpg" alt="img15"/></a>
+					<figcaption>
+						<h2 class="photostack-title">Chuck e Chesse</h2>
+					</figcaption>
+				</figure>
+				<figure data-dummy>
+					<a href="#" class="photostack-img"><img src="img/16.jpg" alt="img16"/></a>
+					<figcaption>
+						<h2 class="photostack-title">F1</h2>
+					</figcaption>
+				</figure>
+			</div>
+		</section>
+ 
+		<script src="js/classie.js"></script>
+		<script src="js/photostack.js"></script>
+		
+		<script>
+			// [].slice.call( document.querySelectorAll( '.photostack' ) ).forEach( function( el ) { new Photostack( el ); } );
+			
+			new Photostack( document.getElementById( 'photostack-1' ), {
+				callback : function( item ) {
+					//console.log(item)
+				}
+			} );
+			
+		</script>
+	</body>
 </html>
